Implement Post-Processing Pipeline and Fix SFML OpenGL State Crash
- Added PostProcessor class for framebuffer management.
- Implemented postprocess.frag shader with Vignette, Film Grain, and Gamma Correction (Addressing Critique #7).
- Integrated off-screen rendering into the main Game loop.
- Fixed critical GL_INVALID_OPERATION crash by correctly unbinding VAOs before SFML UI rendering.
- Updated CMake build configuration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,8 @@ add_executable(${PROJECT_NAME}
         src/Entities/Player.h
         src/Entities/Map.cpp
         src/Entities/Map.h
+        src/Graphics/PostProcessor.cpp
+        src/Graphics/PostProcessor.h
 )
 
 # --- Include Paths ---
