Implement 3D Spatial Audio System
- Added AudioManager class handling SFML Audio resources.
- Integrated spatial 3D sounds (humming lights) and ambient music.
- Added footstep feedback to Player controller based on movement state.
- Fixed SFML 3.0 compilation errors (setLooping, Sound constructors).
- Updated Player and Game classes to utilize the new Audio subsystem.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,9 @@ add_executable(${PROJECT_NAME}
         src/Entities/Map.h
         src/Graphics/PostProcessor.cpp
         src/Graphics/PostProcessor.h
+        # Add these to add_executable:
+        src/Core/AudioManager.cpp
+        src/Core/AudioManager.h
 )
 
 # --- Include Paths ---
